--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Young Entrepreneur</title>
+    <title>Penguin Solutions</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            color: #333;
+            color: white;
+            background-color: black;
         }
         header {
             background-color: #4CAF50;
@@ -36,6 +37,7 @@
             color: white;
             padding: 50px 20px;
             text-align: center;
+            background-color: black;
         }
         .hero h1 {
             margin: 0;
@@ -58,7 +60,7 @@
 <body>
 
     <header>
-        <h1>Young Entrepreneur</h1>
+        <h1>Penguin Solutions</h1>
         <p>Turning Ideas into Reality</p>
     </header>
 
@@ -70,33 +72,32 @@
 
     <section class="hero">
         <h1>Welcome to My World of Innovation</h1>
-        <p>Empowering Young Minds to Succeed</p>
+        <p>Empowering Young Minds to Succeed and You're Business to Grow</p>
     </section>
 
     <section id="about" class="content">
         <h2>About Me</h2>
-        <p>Hello! I'm [Your Name], a passionate young entrepreneur with a vision to create impactful solutions and drive change. With a background in [Your Field], I am dedicated to turning innovative ideas into successful ventures.</p>
+        <p>Hello! I'm Memphis, a passionate young entrepreneur with a vision to create impactful solutions and drive change. With a background in IT, I am dedicated to turning innovative ideas into successful ventures.</p>
     </section>
 
     <section id="services" class="content">
         <h2>Services</h2>
         <ul>
-            <li>Business Consulting</li>
-            <li>Startup Mentoring</li>
+            <li>Seo</li>
+            <li>Social Media Manangement</li>
             <li>Marketing Strategies</li>
-            <li>Product Development</li>
+            <li>Website Development</li>
         </ul>
     </section>
 
     <section id="contact" class="content">
         <h2>Contact Me</h2>
         <p>Have a question or want to collaborate? Feel free to reach out!</p>
-        <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
-        <p>Phone: +123-456-7890</p>
+        <p>Email: <a href="mailto:penguin.soutions@penguinsollutions.com">memphis.jervis@icloud.com</a></p>
     </section>
 
     <footer>
-        <p>&copy; 2024 Young Entrepreneur. All rights reserved.</p>
+        <p>&copy; 2024 Penguin Solutions. All rights reserved.</p>
     </footer>
 
 </body>
