--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             color: white;
             text-align: center;
             padding: 10px;
-            position: fixed;
+            position: bottom;
             width: 100%;
             bottom: 0;
         }
