--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <section id="contact" class="content">
         <h2>Contact Me</h2>
         <p>Have a question or want to collaborate? Feel free to reach out!</p>
-        <p>Email: <a href="mailto:penguin.soutions@penguinsollutions.com">memphis.jervis@icloud.com</a></p>
+        <p><a href="mailto:penguin.soutions@penguinsollutions.com">Email Us</a></p>
     </section>
 
     <footer>
